# cpp-project-template-clion

./: .clang-tidy  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
src/division/: CMakeLists.txt  Division.cpp  Division.h
tests/: CMakeLists.txt  main.cpp
